--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 
 
-      <div id='menu'></div>
+      <div id='menu'>
+        </div>
       <div id='map'></div>
       <div id='panel'>
         <div id='sequencecontrol'></div>
@@ -35,8 +36,9 @@
       <div id='forward'></div>
       <div id='reverse'></div>
 
-        <!--put your initial page content here-->
       <h1>Obesity Rate in the United States from 2003-2015</h1>
+        <!--put your initial page content here-->
+
 
         <!--you can also use this space for internal scripts or stylesheets;
         place these within <script> or <style> tags-->
